<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConsultaDatos">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >

            <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tableLayoutContactos"
                    android:stretchColumns="1,2,3,4,5">


                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewId_texto"
                        android:background="?attr/editTextBackground"
                        android:textColor="@android:color/black" />
                    <TextView
                            android:text="@string/textViewName_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:textColor="@android:color/black"
                            android:id="@+id/textView4"/>
                    <TextView
                            android:text="@string/textViewEmail_text"
                            android:layout_width="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:textColor="@android:color/black"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3"/>
                    <TextView
                            android:text="@string/textViewAddress_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:textColor="@android:color/black"
                            android:id="@+id/textView2"/>
                    <TextView
                            android:text="@string/textViewGender_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?attr/editTextBackground"
                            android:textColor="@android:color/black"
                            android:id="@+id/textView"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/editTextBackground"
                        android:text="@string/textViewPhone_text"
                        android:textColor="@android:color/black" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>